--- a/TaskOne/style.css
+++ b/TaskOne/style.css
@@ -135,8 +135,70 @@ nav{
     flex-direction: column;
     gap: 2rem;
     background-color:rgba(188,28,92,0.9);
-    /*transform: translateY(-100%);*/
+    transform: translateY(-100%);
     transition: 0.5s;
     z-index: -1;
+
+}
+.nav__links.open{
+    transform: translateY(0);
+}
+
+.nav__links a{
+    position: relative;
+    isolation: isolate;
+    padding-bottom: 8px ;
+    color: var(--white);
+    transition: 0.3s;
+}
+
+.nav__btn{
+    display: none;
+
+}
+
+@media(width > 768px){
+    nav {
+        padding: 2rem 1rem;
+        position: static;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .nav__bar{
+        padding: 0;
+        background-color: transparent;
+    }
+    .nav__menu__btn{
+        display: none;
+    }
+    .nav__links{
+        padding: 0;
+        width: unset;
+        position: static;
+        transform: none;
+        flex-direction: row;
+        background-color: transparent;
+    }
+    .nav__btn{
+        display: block;
+    }
+    .nav__links a::after{
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: 0;
+        height: 2px;
+        width: 0;
+        background-color: var(--primary-color);
+        transition: 0.3s;
+        transform-origin: left;
+    }
+
+    .nav__links a:hover::after{
+        width: 100%;
+
+    }
 
 }
